# executor

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: codeql-analysis.yml
example/: CMakeLists.txt  example.cpp
src/: CMakeLists.txt  executor.cpp  executor.h
test/: CMakeLists.txt  executor_test.cpp
